# bevy_confetti

./: Cargo.toml  README.md
examples/: 2d.rs
src/: confetti.rs  lib.rs
