[package]
name = "bevy_confetti"
version = "0.18.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A simple Bevy confetti crate."
readme = "README.md"
categories = ["rendering"]
keywords = ["bevy", "rendering"]
homepage = "https://github.com/chamaloriz/bevy_confetti"
repository = "https://github.com/chamaloriz/bevy_confetti"
exclude = [
    "assets/*",
]

[dependencies]
bevy = { version = "0.18", default-features = false, features = ["2d"] }
rand = "0.9.2"
